# dough-man

./: .gitignore  README.md  pyproject.toml
docs/: tui-design.drawio
src/doughman/: __init__.py  cli.py  tui.py
