[tool.poetry]
name = "doughman"
version = "0.1.0"
description = ""
authors = ["Robert J. Berger <rberger@ibd.com>"]
readme = "README.md"
packages = [{include = "doughman", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# vl53_400_lib = "^0.1"
vl53_400_Lib = { path = "../lidar/vl53_400_lib/", develop = true }
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
